# plane_render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/common/: aligned_allocator.hpp  basic_math.hpp  common_graphics.hpp  logger.hpp  math_simple.hpp
include/rasterization/: fragment_shader.hpp  graphics_types.hpp  pipeline.hpp  rasterizer.hpp  rendering_geometry.hpp  scene_object.hpp  screen_buffer.hpp  texture.hpp  vertex_shader.hpp
include/sdl_adapter/: render_provider.hpp  sdl_adapter.hpp
include/threadpool/: list_mt.hpp  threadpool.hpp
libsrc/common/: CMakeLists.txt
libsrc/common/src/: logger.cpp  math_simple.cpp
libsrc/rasterization/: CMakeLists.txt
libsrc/rasterization/src/: fragment_shader.cpp  graphics_types.cpp  pipeline.cpp  rasterizer.cpp  rendering_geometry.cpp  scene_object.cpp  screen_buffer.cpp  texture.cpp  vertex_shader.cpp
libsrc/sdl_adapter/: CMakeLists.txt
libsrc/sdl_adapter/src/: sdl_adapter.cpp
libsrc/threadpool/: CMakeLists.txt
libsrc/threadpool/src/: threadpool.cpp
perf/: base_render.pd  plane_render.pd  stats.py
projects/base_render/: CMakeLists.txt
projects/base_render/src/: main.cpp
projects/plane_render/: CMakeLists.txt
projects/plane_render/src/: main.cpp  sdl_adapter.cpp  sdl_adapter.hpp
projects/ray_tracing/: CMakeLists.txt
projects/ray_tracing/src/: geom.hpp  main.cpp  raycast.hpp
